--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ConsultList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ConsultList.cshtml
@@ -508,7 +508,7 @@
             if (c.ScheduleDateString) {
                 var weekday = (new Date(c.ScheduleDateString)).getDay();
 
-                c.ScheduleDateString = c.ScheduleDateString.replaceAll('-', '/') + ' (' + dayNamesZh[weekday] + ')');
+                c.ScheduleDateString = c.ScheduleDateString.replaceAll('-', '/') + ' (' + dayNamesZh[weekday] + ')';
             }
         });
 
