--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Popup.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Popup.cshtml
@@ -17,6 +17,7 @@
     var WebEntrustLink = WebUtility.UrlDecode(Settings.GetSetting("WebEntrust"));
     var MobileEntrustLink = WebUtility.UrlDecode(Settings.GetSetting("MobileEntrust"));
     var IleoEntrustLink = WebUtility.UrlDecode(Settings.GetSetting("IleoEntrust"));
+    var fcbLevel = Settings.GetSetting("FcbLevel");
 }
 <div id="popupLogin" class="c-modal mfp-hide">
     <div class="c-modal__wrap">
@@ -36,6 +37,8 @@
                             <a href="#" class="o-btn o-btn--primary o-btn--sm o-btn--flat" data-eh="fcbapplogin-init,fcbapplogin-click" eh-login-type="ileo">ileo</a>
                         </div>
                     </div>
+                    @if (fcbLevel == "2")
+                    {
                     <div class="c-loginBox__social">
                         <div class="c-socialBox">
                             <div class="c-socialBox__title">社群登入</div>
@@ -49,6 +52,7 @@
                             </ul>
                         </div>
                     </div>
+                    }
                 </div>
             </div>
             <div class="c-loginModal__item">
