update: 判斷紅綠燈寫入即時資料＆＆ileo雙向同步

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_ShareScript.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_ShareScript.cshtml
@@ -676,7 +676,7 @@
                   $.ajax({
                     type: "post",
                     url: "@ClientRoute.GenerateUrl(this, "Accounts", "InsertTrack")",
-                    data: { "trackList": store.get("focus") || [] },
+                    data: { "trackList": store.get("focus") || [], "productId": cancelId },
                     beforeSend: function () { $('.c-loading').loading('show'); },
                       success: function (msg) {
                          switch (cancelType.toLowerCase()) {
