--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_Performance.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_Performance.cshtml
@@ -6,7 +6,7 @@
     var etfData = Model.BasicEtf as EtfDetail;
     var ETFReturnChartDataApiUrl = ClientRoute.GenerateUrl(this, "EtfDetail", "GetReturnChartData");
     var ETFReturnReferenceIndexChartDataApiUrl = ClientRoute.GenerateUrl(this, "EtfDetail", "GetReturnReferenceIndexChartData");
-    var ETFGetReturnGlobalIndexChartDataApiUrl = ClientRoute.GenerateUrl(this, "EtfDetail", "GetReturnGlobalIndexChartData");
+    var ETFGetBenchmarkROIChartDataApiUrl = ClientRoute.GenerateUrl(this, "EtfDetail", "GetBenchmarkROIChartData");
 }
 
 @*績效/淨值*@
@@ -777,7 +777,7 @@
         function checkSameYearAndMonth(time1, time2) {
             let prevDate = new Date(time1);
             let currentDate = new Date(time2);
-            return prevDate.getMonth() + 1 === currentDate.getMonth() + 1 
+            return prevDate.getMonth() + 1 === currentDate.getMonth() + 1
                 && prevDate.getFullYear() === currentDate.getFullYear();
         }
 
@@ -1335,11 +1335,10 @@
                         ...obj
                     };
 
-                    var mapMarketPriceData, mapNetWorthData, mapGlobalIndexData;
+                    var mapMarketPriceData, mapNetWorthData, mapReferenceIndexData;
 
                     // 呼叫 API ETF詳細頁 – 績效/淨值 - ETF績效圖
                     var queryTrend = apiRequest('@ETFReturnReferenceIndexChartDataApiUrl', params);
-                    var queryGlobalIndex = apiRequest('@ETFGetReturnGlobalIndexChartDataApiUrl', params);
 
                     queryTrend.then((data) => {
                         if (Object.keys(data).length != 0
@@ -1378,38 +1377,26 @@
                             $('[data-chart="etfTrend"]').find('.c-chartBox, .l-dataNotes').addClass('u-hidden');
                         }
 
-                        return queryGlobalIndex;
+                        var queryBenchmarkROI = apiRequest('@ETFGetBenchmarkROIChartDataApiUrl', params);
+                        return queryBenchmarkROI;
                     }).then((data) => {
                         // 指數
-                        queryGlobalIndex.then((data) => {
-                            if (data.StatusCode == 200) {
-                                const stockIndex = data.Body.respGlobalIndex;
+                        if (data.StatusCode == 200) {
+                            const stockIndex = data.Body.respReferenceIndex;
 
-                                if (stockIndex) {
-                                    mapGlobalIndexData = data.Body.respGlobalIndex.map((item, index) => {
+                            if (stockIndex) {
+                                mapReferenceIndexData = stockIndex.resultSet.result.map((item) => {
+                                    return {
+                                        name: item.v1,
+                                        upDown: Number(item.v2) < 0 ? 'down' : 'up',
+                                        x: new Date(item.v1).getTime(),
+                                        y: roundToTwo(item.v2)
+                                    };
+                                })
 
-                                        let current = stockIndex[index];
-                                        let prev = stockIndex[index - 1] || current;
-                                        if (current === undefined || prev === undefined) {
-                                            return false;
-                                        }
-                                        let extent = current.close - prev.close;
-                                        let extentPercentage = extent / current.close * 100;
-
-                                        return {
-                                            name: dateFormat(item.date),
-                                            upDown: item.close < 0 ? 'down' : 'up',
-                                            x: new Date(dateFormat(item.date)).getTime(),
-                                            y: roundToTwo(extentPercentage)
-                                        };
-                                    });
-
-                                    mapGlobalIndexData.sort((a, b) => { return a.x - b.x; });
-                                    // 過濾舊資料
-                                    mapGlobalIndexData = mapGlobalIndexData.filter((item) => item.x >= mapMarketPriceData[0].x);
-                                }
+                                mapReferenceIndexData.sort((a, b) => { return a.x - b.x; });
                             }
-                        });
+                        }
                     }).then(() => {
 
                         let series = [{
@@ -1424,7 +1411,7 @@
                             turboThreshold: 0,
                         }, {
                             name: '@etfData.StockIndexName',
-                            data: mapGlobalIndexData,
+                            data: mapReferenceIndexData,
                             legendSymbol: 'rectangle',
                             turboThreshold: 0,
                         }];
