完成預約回到列表

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/Consult.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/Consult.cshtml
@@ -420,7 +420,7 @@
         <div class="c-modal__action">
             <div class="l-action l-action--inline">
                 <div class="l-action__item">
-                    <a class="o-btn o-btn--primary o-btn--sm">確定</a>
+                    <a class="o-btn o-btn--primary o-btn--sm" data-done>確定</a>
                 </div>
             </div>
         </div>
@@ -671,6 +671,12 @@
 
             $('#step01').show();
             $('#step02').hide();
+        });
+
+        $('[data-done]').on('click', function (e) {
+            e.preventDefault();
+
+            location.href = new URL(location.origin + '@Model.ReturnLink');
         });
 
         $('#input-tel').change(function () {
