--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsult.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsult.cshtml
@@ -456,7 +456,9 @@
     const holidayDates = @Model.HolidayDatesHtmlString;
     const consultSchedules = @Model.ConsultSchedulesHtmlString;
     const reserveds = @Model.ReservedsHtmlString;
-    const dayNamesZh = ['日', '一', '二', '三', '四', '五', '六']
+    const dayNamesZh = ['日', '一', '二', '三', '四', '五', '六'];
+    const emailReg = /^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$/;
+    const phoneReg = /^09[0-9]{8}$/;
 
     var currentConsultSchedule = {
         CustomerID: '',
@@ -539,13 +541,13 @@
         function verify() {
             var flag = true;
 
-            if (currentConsultSchedule.Phone) {
+            if (currentConsultSchedule.Phone && validatePhone(currentConsultSchedule.Phone)) {
             }
             else {
                 flag = false;
             }
 
-            if (currentConsultSchedule.Mail) {
+            if (currentConsultSchedule.Mail && validateEmail(currentConsultSchedule.Mail)) {
             }
             else {
                 flag = false;
@@ -703,7 +705,7 @@
         $('#input-tel').change(function () {
             $('#l-form-phone').addClass('is-error');
             bindText();
-            if (currentConsultSchedule.Phone) {
+            if (currentConsultSchedule.Phone && validatePhone(currentConsultSchedule.Phone)) {
                 $('#l-form-phone').removeClass('is-error');
             }
         });
@@ -711,10 +713,18 @@
         $('#input-email').change(function () {
             $('#l-form-mail').addClass('is-error');
             bindText();
-            if (currentConsultSchedule.Mail) {
+            if (currentConsultSchedule.Mail && validateEmail(currentConsultSchedule.Mail)) {
                 $('#l-form-mail').removeClass('is-error');
             }
         });
+
+        function validateEmail(email) {
+            return emailReg.test(email);
+        }
+
+        function validatePhone(phone) {
+            return phoneReg.test(phone);
+        }
 
         $('[data-subject]').on('click', function (e) {
             $('#l-form-subject').addClass('is-error');
