update 同步oracle log調整

--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
@@ -546,7 +546,7 @@
             if (focusStore.length > 0 && focusId != '') {
                 let idx = focusStore.findIndex((x) => x.id == focusId);
                 if (idx >= 0) {
-                    e.target.innerText = focusStore[idx].trackDate != null ?　focusStore[idx].trackDate + "加入關注" : "iLeo";
+                    e.target.innerText = focusStore[idx].trackDate != null ? focusStore[idx].trackDate + "加入關注" : "自iLEO追蹤清單匯入";
                 }
             }
         });
